--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "My A,B,C : Apple, Beer, Coding"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/profileImage.png'
-background:         'assets/img/girlReading.jpg'
+background:         'assets/img/reading-sunset.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url: https://HenrySungnamKim.github.io
